landscape on mobile fixes

--- a/_sass/global/typography.scss
+++ b/_sass/global/typography.scss
@@ -9,31 +9,31 @@ p {
     line-height: 1.5;
 }
 h1 {
-    font-size: 4em;
+    font-size: 3.5em;
     line-height: 1.5;
     @media only screen and (max-width: $max-mobile-width) {
         font-size: 3em;
     }
 }
 h2 {
-    font-size: 2.2em;
+    font-size: 2.1em;
     line-height: 1.5;
     @media only screen and (max-width: $max-mobile-width) {
-        font-size: 2em;
+        font-size: 1.9em;
     }
 }
 h3 {
-    font-size: 1.95em;
+    font-size: 1.9em;
     line-height: 1.35;
     @media only screen and (max-width: $max-mobile-width) {
-        font-size: 1.75em;
+        font-size: 1.65em;
     }
 }
 h4 {
     font-size: 1.4em;
     line-height: 1.35;
     @media only screen and (max-width: $max-mobile-width) {
-        font-size: 1.3em;
+        font-size: 1.25em;
     }
 }
 h5 {
