--- a/_sass/includes/footer.scss
+++ b/_sass/includes/footer.scss
@@ -1,7 +1,7 @@
 $logo-image-width: 40px;
 
 footer {
-    background-color: $color-black;
+    background-color: $color-grey;
     float: left;
     padding: $spacer-lg $spacer-lg;
     @media only screen and (max-width: 768px) {
